<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.binance.raft-exchange</groupId>
	<artifactId>raft-exchange</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>exchange-core</module>
		<module>raft-exchange-server</module>
		<module>raft-exchange-client</module>
		<module>raft-exchange-spi</module>
	</modules>

	<properties>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<exchange-core.version>1.0.0-SNAPSHOT</exchange-core.version>
		<exchange-spi.version>1.0.0-SNAPSHOT</exchange-spi.version>
		<binance-infra.version>2.0.0-SNAPSHOT</binance-infra.version>
		<grpc.version>1.70.0</grpc.version>
		<jraft.version>1.3.15</jraft.version>
		<kafka.version>3.9.0</kafka.version>
		<rocksdb.version>6.29.5</rocksdb.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.binance.raft-exchange</groupId>
				<artifactId>exchange-core</artifactId>
				<version>${exchange-core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.binance.raft-exchange</groupId>
				<artifactId>raft-exchange-spi</artifactId>
				<version>${exchange-spi.version}</version>
			</dependency>
			<dependency>
				<groupId>com.binance.infra.avengers</groupId>
				<artifactId>binance-infra-dependencies</artifactId>
				<version>${binance-infra.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.alipay.sofa</groupId>
				<artifactId>jraft-core</artifactId>
				<version>${jraft.version}</version>
				<exclusions>
					<exclusion>
						<artifactId>protobuf-java</artifactId>
						<groupId>com.google.protobuf</groupId>
					</exclusion>
					<exclusion>
						<groupId>net.java.dev.jna</groupId>
						<artifactId>jna</artifactId>
					</exclusion>
					<exclusion>
						<groupId>com.lmax</groupId>
						<artifactId>disruptor</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-all</artifactId>
				<version>${grpc.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.kafka</groupId>
				<artifactId>kafka-clients</artifactId>
				<version>${kafka.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>bijie-snapshots</id>
			<name>Bijie Project SNAPSHOTS</name>
			<url>${deploy.snapshot.url}</url>
		</snapshotRepository>
		<repository>
			<id>bijie-releases</id>
			<name>Bijie Project Release</name>
			<url>${deploy.release.url}</url>
		</repository>
	</distributionManagement>
</project>